# arb-alloy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/arb-alloy/: Cargo.toml  README.md
crates/arb-alloy/src/: lib.rs
crates/arb-alloy/tests/: arb_integration.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: header.rs  lib.rs  receipt.rs
crates/consensus/src/interfaces/: ArbosActs.sol
crates/consensus/src/transactions/: batchpostingreport.rs  contract.rs  deposit.rs  internal.rs  mod.rs  nitro_hash_tests.rs  retry.rs  submit_retryable.rs  typed.rs  unsigned.rs  util.rs
crates/consensus/testdata/: nitro_header_fixtures.json  nitro_receipt_fixtures.json  nitro_tx_fixtures.json
crates/consensus/tests/: nitro_header_fixture_parity.rs  nitro_receipt_fixture_parity.rs  nitro_tx_fixture_parity.rs
crates/network/: Cargo.toml  README.md
crates/network/src/: lib.rs
crates/precompiles/: Cargo.toml  README.md
crates/precompiles/src/: addresses.rs  lib.rs
crates/precompiles/src/interfaces/: arb_address_table.rs  arb_aggregator.rs  arb_debug.rs  arb_function_table.rs  arb_gas_info.rs  arb_info.rs  arb_owner.rs  arb_owner_public.rs  arb_retryable_tx.rs  arb_statistics.rs  arb_sys.rs  arb_wasm.rs  arb_wasm_cache.rs  arbos_acts.rs  mod.rs  node_interface.rs
crates/precompiles/tests/: precompile_method_selectors.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: lib.rs
crates/provider/src/ext/: arb.rs  arbdebug.rs  arbtrace.rs  auctioneer.rs  mod.rs  timeboost.rs
crates/rpc-types/: Cargo.toml  README.md
crates/rpc-types/src/: arbdebug.rs  arbtrace.rs  lib.rs  receipt.rs  request.rs  timeboost.rs  transaction.rs
crates/sequencer-network/: Cargo.toml  README.md
crates/sequencer-network/src/: lib.rs
crates/sequencer-network/src/sequencer/: feed.rs  mod.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/test-utils/src/abis/: Inbox.json
docs/: README.md  faq.md  quickstart.md
docs/guides/: connect-provider.md  local-dev-chain.md  precompiles.md  provider-extensions.md
examples/rpc-smoke/: Cargo.toml  README.md
examples/rpc-smoke/src/: main.rs
scripts/: go.mod  go.sum  main.go  regenerate_nitro_tx_fixtures.sh
