[workspace]
resolver = "2"
members = [
  "crates/consensus",
  "crates/sequencer-network",
  "crates/network",
  "crates/rpc-types",
  "crates/provider",
  "crates/precompiles",
  "crates/arb-alloy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Alloy Contributors"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/alloy-rs/arb-alloy"
repository = "https://github.com/alloy-rs/arb-alloy"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
result_large_err = "allow"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Workspace crates
arb-alloy-consensus = { version = "0.1.0", path = "crates/consensus", default-features = false }
arb-alloy-network = { version = "0.1.0", path = "crates/network", default-features = false }
arb-alloy-precompiles = { version = "0.1.0", path = "crates/precompiles", default-features = false }
arb-alloy-provider = { version = "0.1.0", path = "crates/provider", default-features = false }
arb-alloy-rpc-types = { version = "0.1.0", path = "crates/rpc-types", default-features = false }
arb-sequencer-network = { version = "0.1.0", path = "crates/sequencer-network", default-features = false }

# Alloy
alloy-consensus = { version = "1.6.3", default-features = false, features = ["k256"] }
alloy-eips = { version = "1.6.3", default-features = false }
alloy-rlp = { version = "0.3.9", default-features = false }
alloy-contract = { version = "1.6.3", default-features = false }
alloy-serde = { version = "1.6.3", default-features = false }
alloy-network = { version = "1.6.3", default-features = false }
alloy-network-primitives = { version = "1.6.3", default-features = false }
alloy-rpc-types-eth = { version = "1.6.3", default-features = false }
alloy-provider = { version = "1.6.3", default-features = false }
alloy-transport = { version = "1.6.3", default-features = false }

# External alloy-core / primitives
alloy-core = { version = "1.4.1", default-features = false, features = ["sol-types"] }
alloy-primitives = { version = "1.4.1", default-features = false }

# External
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"

[patch.crates-io]
# alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
# alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "YOUR_REV" }
