[package]
name = "arb-alloy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Arbitrum Alloy SDK"

[lib]
path = "src/lib.rs"

[dependencies]
arb-alloy-consensus = { workspace = true, optional = true }
arb-alloy-network = { workspace = true, optional = true }
arb-alloy-provider = { workspace = true, optional = true }
arb-alloy-rpc-types = { workspace = true, optional = true }

[features]
default = ["consensus", "network", "rpc-types", "provider"]

full = ["consensus", "network", "rpc-types", "provider"]

consensus = ["dep:arb-alloy-consensus"]
network = ["dep:arb-alloy-network"]
provider = ["dep:arb-alloy-provider"]
rpc-types = ["dep:arb-alloy-rpc-types"]

[dev-dependencies]
alloy-eips = { workspace = true }
alloy-network-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = { workspace = true }
reqwest = { version = "0.12", default-features = false }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "arb_integration"
path = "tests/arb_integration.rs"
required-features = ["consensus", "network", "provider", "rpc-types"]
