[package]
name = "arb-alloy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Arbitrum Alloy SDK"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arb-alloy-consensus = { workspace = true, optional = true }
arb-alloy-network = { workspace = true, optional = true }
arb-alloy-precompiles = { workspace = true, optional = true }
arb-alloy-provider = { workspace = true, optional = true }
arb-alloy-rpc-types = { workspace = true, optional = true }

[features]
default = ["std", "k256", "serde"]

std = [
  "arb-alloy-consensus?/std",
  "arb-alloy-network?/std",
  "arb-alloy-precompiles?/std",
  "arb-alloy-provider?/std",
  "arb-alloy-rpc-types?/std",
]

full = ["consensus", "network", "precompiles", "rpc-types", "provider"]

k256 = ["arb-alloy-consensus?/k256"]

serde = [
  "arb-alloy-consensus?/serde",
  "arb-alloy-network?/serde",
  "arb-alloy-provider?/serde",
  "arb-alloy-rpc-types?/serde",
]

consensus = ["dep:arb-alloy-consensus"]
network = ["dep:arb-alloy-network"]
precompiles = ["dep:arb-alloy-precompiles"]
provider = ["dep:arb-alloy-provider"]
rpc-types = ["dep:arb-alloy-rpc-types"]

[dev-dependencies]
alloy-eips = { workspace = true }
alloy-network-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = { workspace = true }
reqwest = { version = "0.12", default-features = false }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "arb_integration"
path = "tests/arb_integration.rs"
required-features = ["consensus", "network", "provider", "rpc-types"]
