[package]
name = "arb-alloy-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Consensus-layer types for Arbitrum transactions (Alloy integration)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-serde.workspace = true
bytes.workspace = true
serde.workspace = true
alloy-core.workspace = true
alloy-contract.workspace = true
arb-sequencer-network = { path = "../sequencer-network" }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = []
serde = []
k256 = []
