[package]
name = "arb-alloy-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Consensus-layer types for Arbitrum transactions (Alloy integration)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-serde.workspace = true
bytes.workspace = true
serde.workspace = true
alloy-core.workspace = true
alloy-contract.workspace = true
arb-sequencer-network.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-primitives/std",
    "alloy-rlp/std",
    "alloy-serde/std",
    "alloy-core/std",
    "bytes/std",
    "serde/std",
    "arb-sequencer-network/std",
]
serde = []
k256 = ["alloy-consensus/k256"]
