[package]
name = "arb-alloy-network"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Arbitrum Network implementation for Alloy"

[lib]
path = "src/lib.rs"

[dependencies]
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
arb-alloy-consensus = { path = "../consensus" }
arb-alloy-rpc-types = { path = "../rpc-types" }
