[package]
name = "arb-alloy-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Arbitrum provider extensions for Alloy"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types-eth.workspace = true
arb-alloy-network.workspace = true
arb-alloy-rpc-types.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["std"]
std = [
    "alloy-provider/reqwest",
    "alloy-provider/reqwest-default-tls",
    "arb-alloy-network/std",
    "arb-alloy-rpc-types/std",
]
serde = [
    "arb-alloy-network/serde",
    "arb-alloy-rpc-types/serde",
]
