[package]
name = "arb-sequencer-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Network-layer types for the Arbitrum sequencer feed protocol"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
bytes.workspace = true
serde.workspace = true
alloy-core.workspace = true
alloy-contract.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = []
serde = []
